# mikado

./: .gitignore  Makefile.am  NEWS  README  configure.ac  mikado.pc.in
data/: Makefile.am  mikado.glade
doc/: mikado-classes.dia
mikado/: Makefile.am  mikado-version.h  mikado.h
prototypes/gegl-stuff/: Makefile  main.c
prototypes/glade-gui/: Makefile  glade-proto.c
prototypes/graph-layout/: Makefile  README.txt  graph_layout.c  graph_layout.h  main.c
src/: Makefile.am  main.c
